WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
172204
GCController::garbageCollectNowIfNotDoneRecently should request Async Full GCs
https://bugs.webkit.org/show_bug.cgi?id=172204
Summary
GCController::garbageCollectNowIfNotDoneRecently should request Async Full GCs
Filip Pizlo
Reported
2017-05-16 18:01:34 PDT
Patch forthcoming.
Attachments
the patch
(1.96 KB, patch)
2017-05-16 18:06 PDT
,
Filip Pizlo
saam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2017-05-16 18:03:36 PDT
I think that this is the last part of
https://bugs.webkit.org/show_bug.cgi?id=171689
Filip Pizlo
Comment 2
2017-05-16 18:06:16 PDT
Created
attachment 310338
[details]
the patch
Filip Pizlo
Comment 3
2017-05-16 19:12:02 PDT
Landed in
http://trac.webkit.org/changeset/216965/webkit
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug